Fix ui issues on Ie11 and Safari (#927)
* IE11 does not support 'unset'

* add translatez for fix Safari scrollbar issue

--- a/packages/ringcentral-widgets/components/ContactDisplay/styles.scss
+++ b/packages/ringcentral-widgets/components/ContactDisplay/styles.scss
@@ -21,7 +21,7 @@
     margin: 0px;
     font-size: 14px;
     height: auto;
-    line-height: initial;
+    line-height: normal;
     display: flex;
     align-items: center;
   }
